# esp32c3-shared-i2c

./: .gitignore  Cargo.toml  Readme.md  build.rs  esp32c3-display.code-workspace
.cargo/: config.toml
