[package]
edition = "2021"
name = "esp32c3-shared-i2c"
version = "0.1.0"
description = "Example for Shared I2C bus for multiple devices"
authors = ["Martin Westermeier <mwesterm@mailbox.org>"]
keywords = ["esp32c3", "embassy", "i2c", "ssd1306", "ms5611", "async"]

[[bin]]
name = "esp32c3-shared-i2c"
path = "./src/bin/main.rs"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-sync = { version = "0.6.2" }
embassy-embedded-hal = { version = "0.3.0", features = ["default"] }

embedded-hal-bus = { version = "*", features = ["async"] }
embedded-graphics = "0.8.1"

esp-alloc = { version = "0.7.0" }
esp-backtrace = { version = "0.15.1", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "defmt",
] }

esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c3"] }
esp-println = { version = "0.13.1", features = ["esp32c3", "defmt-espflash"] }


ssd1306 = { path = "../ssd1306", features = ["async"] }

ms5611-i2c = { path = "/home/mwesterm/Projects/esp/rust/ms5611/ms5611-i2c", features = [
  "is_async",
], default-features = false }

defmt = "0.3.0"
static_cell = { version = "2.1.0", features = ["nightly"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
